Fix EditorRow being oversize and CounterCreator centering issues on mobile

--- a/src/App.scss
+++ b/src/App.scss
@@ -86,15 +86,17 @@ $themes: ("red":#FD151B,
 
 // Counter Table
 
-td {
-    width: 100vw;
-}
 
 
 #counter-table, td {
   padding: 5px;
   border-spacing: 0px 5px;
 }
+
+#counter-table td {
+  width: 100vw;
+}
+
 
 .title-td {
     max-width: 40vw;
@@ -138,10 +140,12 @@ td:last-child, button {
   display: none;
   position: absolute;
   min-width: 90px;
+  right: 15px;
   width: 14vw;
   border-radius: 20px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   flex-direction: column;
+  text-align: center;
 }
 
 .dropdown:hover .dropdown-colors-content, .dropdown:hover .dropdown-options-content {
@@ -149,8 +153,11 @@ td:last-child, button {
   border-radius: 10px;
 }
 
+.dropdown {
+    width: 90px;
+}
 
-#edit-button {
+.edit-button {
   border-top-left-radius: 7px;
   border-top-right-radius: 7px;
   border-bottom-right-radius: 0px;
@@ -158,7 +165,7 @@ td:last-child, button {
   font-size: 20px;
 }
 
-#delete-button {
+.delete-button {
   border-top-left-radius: 0px;
   border-top-right-radius: 0px;
   border-bottom-right-radius: 7px;
